--- a/.github/actions/sbom-and-attest/action.yml
+++ b/.github/actions/sbom-and-attest/action.yml
@@ -12,12 +12,8 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Authenticate to GHCR
-      uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v3.6.0
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ github.token }}
+    - name: Authenticate to registry
+      uses: ./.github/actions/ghcr-login
 
     - name: Validate inputs
       shell: bash
