--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -37,21 +37,8 @@ jobs:
           upload_codecov: 'true'
 
       # Scan for Vulnerabilities
-      - name: Run Trivy Security Scan
-        uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8  # v0.33.1
+      - name: Security Scan
+        uses: ./.github/actions/security-scan
         with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          ignore-unfixed: true
-          hide-progress: true
-          format: 'sarif'
-          output: 'trivy-results.sarif'
           severity: ${{ env.SCAN_SEVERITY }}
-          exit-code: '0'
-        continue-on-error: true
-      - name: Upload Trivy Results to GitHub Security
-        if: always() && hashFiles('trivy-results.sarif') != ''
-        uses: github/codeql-action/upload-sarif@16df4fbc19aea13d921737861d6c622bf3cefe23  # v2.23.0
-        with:
-          sarif_file: 'trivy-results.sarif'
           category: 'trivy-fs'
