--- a/deployments/eidos-agent/1-deps.yaml
+++ b/deployments/eidos-agent/1-deps.yaml
@@ -11,8 +11,11 @@ metadata:
   namespace: gpu-operator
 rules:
   - apiGroups: [""]
+    resources: ["configmaps"]
+    verbs: ["get", "list", "create", "update", "patch"]
+  - apiGroups: [""]
     resources: ["*"]
-    verbs: ["get", "list", "watch", "create", "update", "patch"]
+    verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
