--- a/examples/snapshots/h100.yaml
+++ b/examples/snapshots/h100.yaml
@@ -1,9 +1,9 @@
 kind: Snapshot
 apiVersion: cns.nvidia.com/v1alpha1
 metadata:
-    snapshot-timestamp: "2026-01-02T18:01:13Z"
-    snapshot-version: 0.8.12
-    source-node: ip-10-0-158-18.ec2.internal
+    timestamp: "2026-01-02T18:01:13Z"
+    version: 0.8.12
+    source: ip-10-0-158-18.ec2.internal
 measurements:
     - type: SystemD
       subtypes:
