--- a/deployments/cns-agent/2-job.yaml
+++ b/deployments/cns-agent/2-job.yaml
@@ -42,7 +42,7 @@ spec:
         fsGroupChangePolicy: "OnRootMismatch"
       containers:
         - name: cns
-          image: ghcr.io/nvidia/cns:latest
+          image: ghcr.io/mchmarny/cns:latest
           command: ["/bin/sh", "-c"]
           env:
             - name: NODE_NAME
