--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -95,6 +95,7 @@ kos:
     build: cnsd
     repositories:
       - ghcr.io/mchmarny/cnsd
+    base_image: gcr.io/distroless/static:nonroot
     platforms:
       - linux/amd64
       - linux/arm64
