feat: add k8s-dra-driver-k8s bundler
Signed-off-by: Yuan Chen <yuanc@nvidia.com>

remove bundles

Signed-off-by: Yuan Chen <yuanc@nvidia.com>

update

Signed-off-by: Yuan Chen <yuanc@nvidia.com>

Fix the copilot issues

Signed-off-by: Yuan Chen <yuanc@nvidia.com>

fixed type test

Signed-off-by: Yuan Chen <yuanc@nvidia.com>

fix

Signed-off-by: Yuan Chen <yuanc@nvidia.com>

fix

Signed-off-by: Yuan Chen <yuanc@nvidia.com>

Revert "feat: add k8s-dra-driver-k8s bundler"

This reverts commit a37a0d276a4653e63a12773a052029df19c40fdf.

Reapply "feat: add k8s-dra-driver-k8s bundler"

This reverts commit 4cd3823be562d2ce16cd48df66c249b29f466a45.

Revert change to bundler.go

Signed-off-by: Yuan Chen <yuanc@nvidia.com>

--- a/pkg/recipe/data/gb200-eks-training.yaml
+++ b/pkg/recipe/data/gb200-eks-training.yaml
@@ -40,3 +40,12 @@ spec:
       type: Helm
       overrides:
         customization: training
+
+    # Enable k8s-dra-driver-gpu for GB200
+    - name: k8s-dra-driver-gpu
+      type: Helm
+      source: https://helm.ngc.nvidia.com/nvidia
+      version: v25.8.1
+      valuesFile: components/k8s-dra-driver-gpu/values.yaml
+      dependencyRefs:
+        - gpu-operator
