--- a/pkg/recipe/data/h100-ubuntu-inference.yaml
+++ b/pkg/recipe/data/h100-ubuntu-inference.yaml
@@ -32,7 +32,7 @@ spec:
         - cert-manager
 
     # Override with Ubuntu customization for Skyhook
-    - name: skyhook
+    - name: skyhook-operator
       type: Helm
       overrides:
         customization: ubuntu
